--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>game</title>
 </head>
 <body>
-    <h1>raqam topish o'yini</h1>
-    <div id="result-area">natija chiqadi</div>
+    <h1>Raqam topish o'yini</h1>
+    <div id="result-area">Natija chiqadi</div>
+    <div id="chance-area">Qolgan shans : 5 ta</div>
     <input id="user-input" type="number">
     <button id="btn">Go</button>
     <button id="reset-button">Reset</button>
