--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <title>game</title>
 </head>
 <body>
-    <h1>Raqam topish o'yini</h1>
-    <div id="result-area">Natija chiqadi</div>
-    <div id="chance-area">Qolgan shans : 5 ta</div>
-    <input id="user-input" type="number">
-    <button id="btn">Go</button>
+
+    <h1>Raqam topish game</h1>
+    <div id="result-area">natija chiqadi</div>
+    <div id="chance-area">Qolgan shans : 5</div>
+    <input id="user-input" type="number" placeholder="raqamni kiriting">
+    <button id="play-button">Go!!!</button>
     <button id="reset-button">Reset</button>
+
     <script src="main.js"></script>
 </body>
 </html>
