--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>game</title>
 </head>
 <body>
-
+    <div class="container">
     <h1>Raqam topish game</h1>
     <div id="result-area">natija chiqadi</div>
     <div id="chance-area">Qolgan shans : 5</div>
     <input id="user-input" type="number" placeholder="raqamni kiriting">
     <button id="play-button">Go!!!</button>
     <button id="reset-button">Reset</button>
+</div>
+    
 
     <script src="main.js"></script>
 </body>
